全ダイブリスト

--- a/index.html
+++ b/index.html
@@ -123,101 +123,271 @@
 			<li>#32 1990/03/21 和歌山県白浜町 円月島</li>
 			<li>#33 1990/09/09 福島県越前町 玄達瀬</li>
 			<li>#34 1990/09/09 福島県越前町 玄達瀬</li>
-			<li>#30 1990/09/27 和歌山県白浜町 中島赤ブイ</li>
-			<li>#31 1990/09/28 和歌山県白浜町 塔島</li>
-			<li>#32 1990/10/04 和歌山県白浜町 円月島 Rescue Techniques 講習</li>
-			<li>#33 1990/10/04 和歌山県白浜町 円月島 Rescue Techniques 講習</li>
-			<li>#34 1990/10/04 和歌山県白浜町 円月島 Rescue Techniques 講習</li>
+			<li>#35 1990/09/27 和歌山県白浜町 中島赤ブイ</li>
+			<li>#36 1990/09/28 和歌山県白浜町 塔島</li>
+			<li>#37 1990/10/04 和歌山県白浜町 円月島 Rescue Techniques 講習</li>
+			<li>#38 1990/10/04 和歌山県白浜町 円月島 Rescue Techniques 講習</li>
+			<li>#39 1990/10/04 和歌山県白浜町 円月島 Rescue Techniques 講習</li>
 			</ul>
 		</dd>
 		<dt>1991</dt>
 		<dd>
 			<ul>
-			<li>#35 1991/01/05 和歌山県白浜町 臨海</li>
-			<li>#36 1991/01/05 和歌山県白浜町 沖ノ島</li>
+			<li>#40 1991/01/05 和歌山県白浜町 臨海</li>
+			<li>#41 1991/01/05 和歌山県白浜町 沖ノ島</li>
 			</ul>
 		</dd>
 		<dt>1992</dt>
 		<dd>
 			<ul>
-			<li>#37 1992/05/09 静岡県沼津市 大瀬崎先端</li>
-			<li>#38 1992/05/09 静岡県沼津市 湾内</li>
-			<li>#39 1992/05/10 静岡県沼津市 柵下 天狗の棚</li>
-			<li>#40 1992/05/10 静岡県沼津市 一本松</li>
-			<li><a href="1992/1992060701.html">#41 1992/06/07 静岡県沼津市 大瀬崎 一本松</a></li>
-			<li><a href="1992/1992060702.html">#42 1992/06/07 静岡県沼津市 大瀬崎 先端</a></li>
-			<li><a href="1992/1992071201.html">#43 1992/07/12 静岡県松崎町 雲見 赤井浜</a></li>
-			<li><a href="1992/1992071202.html">#44 1992/07/12 静岡県松崎町 雲見 赤井浜</a></li>
-			<li>#45 1992/08/08 福井県越前町 軍艦岩
-			<li>#46 1992/08/08 福井県越前町 玉川観音前
-			<li>#47 1992/12/05 和歌山県白浜町 梶原島
-			<li>#48 1992/12/05 和歌山県白浜町 円月島
+			<li>#42 1992/05/09 静岡県沼津市 大瀬崎先端</li>
+			<li>#43 1992/05/09 静岡県沼津市 湾内</li>
+			<li>#44 1992/05/10 静岡県沼津市 柵下 天狗の棚</li>
+			<li>#45 1992/05/10 静岡県沼津市 一本松</li>
+			<li><a href="1992/1992060701.html">#46 1992/06/07 静岡県沼津市 大瀬崎 一本松</a></li>
+			<li><a href="1992/1992060702.html">#47 1992/06/07 静岡県沼津市 大瀬崎 先端</a></li>
+			<li><a href="1992/1992071201.html">#48 1992/07/12 静岡県松崎町 雲見 赤井浜</a></li>
+			<li><a href="1992/1992071202.html">#49 1992/07/12 静岡県松崎町 雲見 赤井浜</a></li>
+			<li>#50 1992/08/08 福井県越前町 軍艦岩
+			<li>#51 1992/08/08 福井県越前町 玉川観音前
+			<li>#52 1992/12/05 和歌山県白浜町 梶原島
+			<li>#53 1992/12/05 和歌山県白浜町 円月島
 			</ul>
 		</dd>
 		<dt>1993</dt>
 		<dd>
 			<ul>
-			<li>#49 1993/07/19 福井県越前町 軍艦岩</li>
-			<li>#50 1993/07/19 福井県越前町 カレイ崎荘前</li>
-			<li>#51 1993/08/26 和歌山県串本町 オレンジハウス前 Advanced 講習</a></li>
-			<li>#52 1993/08/26 和歌山県串本町 オレンジハウス前 Advanced 講習</a></li>
-			<li>#53 1993/08/27 和歌山県串本町 オレンジハウス前 Advanced 講習</a></li>
-			<li>#54 1993/08/27 和歌山県串本町 オレンジハウス前 Advanced 講習</a></li>
-			<li>#55 1993/08/28 和歌山県串本町 オレンジハウス前 Advanced 講習</a></li>
-			<li>#56 1993/08/28 和歌山県串本町 オレンジハウス前 Advanced 講習</a></li>
-			<li><a href="1993/1993082803.html">#57 1993/08/28 和歌山県串本町 オレンジハウス前 Advanced 講習</a></li>
-			<li><a href="1993/1993082901.html">#58 1993/08/29 和歌山県古座町 上瀬沖の根 Advanced 講習</a></li>
-			<li><a href="1993/1993082902.html">#59 1993/08/29 和歌山県白浜町 上瀬内の根 Advanced 講習</a></li>
-			<li>#60 1993/09/15 和歌山県由良町 白崎立厳</li>
-			<li>#61 1993/09/15 和歌山県由良町 白崎立厳</li>
-			<li>#62 1993/10/11 和歌山県白浜町 エド瀬</li>
-			<li>#63 1993/10/11 和歌山県白浜町 シモサイ</li>
-			<li>#64 1993/11/03 和歌山県白浜町 円月島</li>
-			<li>#65 1993/11/03 和歌山県白浜町 円月島</li>
+			<li>#54 1993/07/19 福井県越前町 軍艦岩</li>
+			<li>#55 1993/07/19 福井県越前町 カレイ崎荘前</li>
+			<li>#56 1993/08/26 和歌山県串本町 オレンジハウス前 Advanced 講習</a></li>
+			<li>#57 1993/08/26 和歌山県串本町 オレンジハウス前 Advanced 講習</a></li>
+			<li>#58 1993/08/27 和歌山県串本町 オレンジハウス前 Advanced 講習</a></li>
+			<li>#59 1993/08/27 和歌山県串本町 オレンジハウス前 Advanced 講習</a></li>
+			<li>#60 1993/08/28 和歌山県串本町 オレンジハウス前 Advanced 講習</a></li>
+			<li>#61 1993/08/28 和歌山県串本町 オレンジハウス前 Advanced 講習</a></li>
+			<li><a href="1993/1993082803.html">#62 1993/08/28 和歌山県串本町 オレンジハウス前 Advanced 講習</a></li>
+			<li><a href="1993/1993082901.html">#63 1993/08/29 和歌山県古座町 上瀬沖の根 Advanced 講習</a></li>
+			<li><a href="1993/1993082902.html">#64 1993/08/29 和歌山県白浜町 上瀬内の根 Advanced 講習</a></li>
+			<li>#65 1993/09/15 和歌山県由良町 白崎立厳</li>
+			<li>#66 1993/09/15 和歌山県由良町 白崎立厳</li>
+			<li>#67 1993/10/11 和歌山県白浜町 エド瀬</li>
+			<li>#68 1993/10/11 和歌山県白浜町 シモサイ</li>
+			<li>#69 1993/11/03 和歌山県白浜町 円月島</li>
+			<li>#70 1993/11/03 和歌山県白浜町 円月島</li>
 			</ul>
 		</dd>
 		<dt>1994</dt>
 		<dd>
 			<ul>
-			<li>#57 1994/05/01 和歌山県古座町 動鳴気漁港横</li>
-			<li>#58 1994/05/02 和歌山県古座町 ブラックトンネル</li>
-			<li>#59 1994/05/02 和歌山県古座町 動鳴気漁港横</li>
-			<li>#60 1994/05/03 和歌山県串本町 オレンジハウス前</li>
-			<li>#61 1994/05/03 和歌山県串本町 住崎</li>
-			<li>#62 1994/05/03 和歌山県串本町 オレンジハウス前</li>
-			<li>#63 1994/05/04 和歌山県串本町 アンドの鼻</li>
-			<li>#64 1994/05/04 和歌山県串本町 住崎</li>
-			<li>#65 1994/05/05 和歌山県串本町 住崎</li>
-			<li>#66 1994/05/06 和歌山県串本町 中黒礁</li>
-			<li>#67 1994/05/21 和歌山県白浜町 ペイマンケイブ</li>
-			<li>#68 1994/05/21 和歌山県白浜町 沈船</li>
-			<li>#69 1994/06/25 和歌山県串本町 オレンジハウス前</li>
-			<li>#70 1994/06/25 和歌山県串本町 オレンジハウス前</li>
-			<li><a href="1994/1994062601.html">#71 1994/06/26 和歌山県串本町 双島沖 1 の根</a></li>
-			<li><a href="1994/1994062602.html">#72 1994/06/26 和歌山県串本町 塔の沖</a></li>
-			<li>#73 1994/07/09 和歌山県串本町 オレンジハウス前</li>
-			<li>#74 1994/07/09 和歌山県串本町 オレンジハウス前</li>
-			<li>#75 1994/07/10 和歌山県串本町 オレンジハウス前</li>
-			<li>#76 1994/07/10 和歌山県串本町 オレンジハウス前</li>
-			<li><a href="1994/1994073101.html">#86 1994/07/31 和歌山県串本町 双島沖 1 の根</a></li>
-			<li><a href="1994/1994073102.html">#87 1994/07/31 和歌山県串本町 イスズミ礁</a></li>
+			<li>#71 1994/05/01 和歌山県古座町 動鳴気漁港横</li>
+			<li>#72 1994/05/02 和歌山県古座町 ブラックトンネル</li>
+			<li>#73 1994/05/02 和歌山県古座町 動鳴気漁港横</li>
+			<li>#74 1994/05/03 和歌山県串本町 オレンジハウス前</li>
+			<li>#75 1994/05/03 和歌山県串本町 住崎</li>
+			<li>#76 1994/05/03 和歌山県串本町 オレンジハウス前</li>
+			<li>#77 1994/05/04 和歌山県串本町 アンドの鼻</li>
+			<li>#78 1994/05/04 和歌山県串本町 住崎</li>
+			<li>#79 1994/05/05 和歌山県串本町 住崎</li>
+			<li>#80 1994/05/06 和歌山県串本町 中黒礁</li>
+			<li>#81 1994/05/21 和歌山県白浜町 ペイマンケイブ</li>
+			<li>#82 1994/05/21 和歌山県白浜町 沈船</li>
+			<li>#83 1994/06/25 和歌山県串本町 オレンジハウス前</li>
+			<li>#84 1994/06/25 和歌山県串本町 オレンジハウス前</li>
+			<li><a href="1994/1994062601.html">#85 1994/06/26 和歌山県串本町 双島沖ササの根</a></li>
+			<li><a href="1994/1994062602.html">#86 1994/06/26 和歌山県串本町 塔の沖</a></li>
+			<li>#87 1994/07/09 和歌山県串本町 オレンジハウス前</li>
+			<li>#88 1994/07/09 和歌山県串本町 オレンジハウス前</li>
+			<li>#89 1994/07/10 和歌山県串本町 オレンジハウス前</li>
+			<li>#90 1994/07/10 和歌山県串本町 オレンジハウス前</li>
+			<li>#91 1994/07/23 福井県越前町 水仙</li>
+			<li>#92 1994/07/23 福井県越前町 水仙</li>
+			<li>#93 1994/07/23 福井県越前町 水仙</li>
+			<li>#94 1994/07/23 福井県越前町 水仙</li>
+			<li>#95 1994/07/24 福井県越前町 水仙</li>
+			<li>#96 1994/07/24 福井県越前町 水仙</li>
+			<li>#97 1994/07/30 和歌山県串本町 オレンジハウス前</li>
+			<li>#98 1994/07/30 和歌山県串本町 オレンジハウス前</li>
+			<li><a href="1994/1994073101.html">#99 1994/07/31 和歌山県串本町 双島沖ササの根</a></li>
+			<li><a href="1994/1994073102.html">#100 1994/07/31 和歌山県串本町 イスズミ礁</a></li>
+			<li>#101 1994/08/21 和歌山県白浜町 円月島西</li>
+			<li>#102 1994/08/21 和歌山県白浜町 円月島西</li>
+			<li>#103 1994/08/27 和歌山県串本町 オレンジハウス前</li>
+			<li>#104 1994/08/28 和歌山県串本町 下浅地</li>
+			<li>#105 1994/08/28 和歌山県串本町 双島沖ササの根</li>
+			<li>#106 1994/09/10 和歌山県串本町 オレンジハウス前</li>
+			<li>#107 1994/09/10 和歌山県串本町 オレンジハウス前</li>
+			<li>#108 1994/09/11 和歌山県串本町 浅地</li>
+			<li>#109 1994/09/11 和歌山県串本町 住崎</li>
+			<li>#110 1994/09/23 和歌山県串本町 オレンジハウス前</li>
+			<li>#111 1994/09/23 和歌山県串本町 イスズミ礁</li>
+			<li>#112 1994/09/24 和歌山県串本町 オレンジハウス前</li>
+			<li>#113 1994/09/24 和歌山県串本町 オレンジハウス前</li>
+			<li>#114 1994/09/25 和歌山県串本町 オレンジハウス前</li>
+			<li>#115 1994/09/25 和歌山県串本町 オレンジハウス前</li>
 			</ul>
 		</dd>
 		<dt>1995</dt>
+		<dd>
+			<ul>
+			<li>#116 1995/01/15 和歌山県白浜町 沈船</li>
+			<li>#117 1995/05/05 和歌山県串本町 島廻り</li>
+			<li>#118 1995/05/05 和歌山県串本町 イスズミ礁</li>
+			<li>#119 1995/06/10 和歌山県串本町 オレンジハウス前</li>
+			<li>#120 1995/06/10 和歌山県串本町 オレンジハウス前</li>
+			<li>#121 1995/06/10 和歌山県串本町 オレンジハウス前</li>
+			<li>#122 1995/06/10 和歌山県串本町 オレンジハウス前</li>
+			<li>#123 1995/06/15 福島県越前町 ブルーマリン前</li>
+			<li>#124 1995/06/16 福島県越前町 軍艦岩</li>
+			<li>#125 1995/07/08 和歌山県串本町 オレンジハウス前</li>
+			<li>#126 1995/07/09 和歌山県串本町 オレンジハウス前</li>
+			<li>#127 1995/07/09 和歌山県串本町 オレンジハウス前</li>
+			<li>#128 1995/07/09 和歌山県串本町 オレンジハウス前</li>
+			<li>#129 1995/07/09 和歌山県串本町 オレンジハウス前</li>
+			</ul>
+		</dd>
 		<dt>1996</dt>
+		<dd>No Dive</dd>
 		<dt>1997</dt>
+		<dd>
+			<ul>
+			<li>#130 1997/08/02 和歌山県串本町 オレンジハウス沖</li>
+			<li>#131 1997/08/03 和歌山県串本町 イスズミ礁</li>
+			<li>#132 1997/08/03 和歌山県串本町 住崎</li>
+			<li>#133 1997/09/14 福井県越前町 浜富前</li>
+			<li>#134 1997/09/14 福井県越前町 浜富前</li>
+			<li>#135 1997/09/15 福井県越前町 浜富前</li>
+			<li>#136 1997/09/15 福井県越前町 浜富前</li>
+			<li>#137 1997/09/28 和歌山県白浜町 沈船</li>
+			<li>#138 1997/09/28 和歌山県白浜町 エド瀬</li>
+			<li>#139 1997/10/04 和歌山県串本町 オレンジハウス前</li>
+			<li>#140 1997/10/04 和歌山県串本町 オレンジハウス前</li>
+			<li>#141 1997/10/05 和歌山県串本町 浅地</li>
+			<li>#142 1997/10/05 和歌山県串本町 オレンジハウス前</li>
+			<li>#143 1997/10/05 和歌山県串本町 オレンジハウス前</li>
+			</ul>
+		</dd>
 		<dt>1998</dt>
 		<dd>
 			<ul>
+			<li>#144 1998/05/04 和歌山県串本町 アンドの鼻</li>
+			<li>#145 1998/05/04 和歌山県串本町 サンピラ</li>
+			<li>#146 1998/05/05 和歌山県串本町 イスズミ礁</li>
+			<li>#147 1998/05/05 和歌山県串本町 サンピラ</li>
+			<li>#148 1998/05/16 和歌山県南部町 ショウガセ</li>
+			<li>#149 1998/05/16 和歌山県南部町 Wアーチ</li>
+			<li>#150 1998/05/16 和歌山県南部町 二子ノ浜</li>
+			<li>#151 1998/05/17 和歌山県南部町 二子ノ浜</li>
+			<li>#152 1998/05/17 和歌山県南部町 二子ノ浜</li>
 			<li><a href="1998/1998060201.html">#153 1998/06/02 和歌山県南部町 ショウガセ</a></li>
+			<li>#154 1998/06/02 和歌山県南部町 二子ノ浜</li>
+			<li>#155 1998/06/02 和歌山県南部町 二子ノ浜</li>
+			<li>#156 1998/06/02 和歌山県南部町 二子ノ浜</li>
+			<li>#157 1998/06/27 和歌山県南部町 二子ノ浜</li>
+			<li>#158 1998/06/27 和歌山県南部町 二子ノ浜</li>
+			<li>#159 1998/06/27 和歌山県南部町 二子ノ浜</li>
+			<li>#160 1998/06/28 和歌山県南部町 ショウガセ</li>
+			<li>#161 1998/06/28 和歌山県南部町 Wアーチ</li>
+			<li>#162 1998/06/28 和歌山県南部町 二子ノ浜</li>
+			<li>#163 1998/07/11 和歌山県南部町 二子ノ浜</li>
+			<li>#164 1998/07/11 和歌山県南部町 二子ノ浜</li>
+			<li>#165 1998/07/11 和歌山県南部町 二子ノ浜</li>
+			<li>#166 1998/07/11 和歌山県南部町 二子ノ浜</li>
+			<li>#167 1998/07/11 和歌山県南部町 二子ノ浜</li>
+			<li>#168 1998/07/12 和歌山県南部町 ウメ</li>
+			<li>#169 1998/07/12 和歌山県南部町 二子ノ浜</li>
+			<li>#170 1998/07/12 和歌山県南部町 スズメ</li>
+			<li>#171 1998/07/12 和歌山県南部町 二子ノ浜</li>
+			<li>#172 1998/07/19 和歌山県南部町 二子ノ浜</li>
+			<li>#173 1998/07/19 和歌山県南部町 二子ノ浜</li>
+			<li>#174 1998/07/19 和歌山県南部町 二子ノ浜</li>
+			<li>#175 1998/07/20 和歌山県南部町 ミサチジマ</li>
+			<li>#176 1998/07/20 和歌山県南部町 プラム</li>
+			<li>#177 1998/08/13 福井県越前町 浜富前(カブシ岩)</li>
+			<li>#178 1998/08/14 福井県越前町 ミツグリ</li>
+			<li>#179 1998/08/14 福井県越前町 アゼグリ</li>
+			<li>#180 1998/08/14 福井県越前町 浜富前(カブシ岩)</li>
+			<li>#181 1998/08/15 福井県越前町 浜富前(カブシ岩)</li>
+			<li>#182 1998/08/15 福井県越前町 浜富前(カブシ岩)</li>
+			<li>#183 1998/08/16 福井県越前町 ミツグリ</li>
+			<li>#184 1998/08/16 福井県越前町 浜富前(カブシ岩)</li>
+			<li>#185 1998/08/16 福井県越前町 アゼグリ</li>
+			<li>#186 1998/08/29 和歌山県南部町 二子ノ浜</li>
+			<li>#187 1998/08/29 和歌山県南部町 二子ノ浜</li>
+			<li>#188 1998/08/29 和歌山県南部町 ミサチジマ</li>
+			<li>#189 1998/08/30 和歌山県南部町 ショウガセ</li>
+			<li>#190 1998/08/30 和歌山県南部町 Wアーチ</li>
+			<li>#191 1998/09/01 和歌山県南部町 二子ノ浜</li>
+			<li>#192 1998/09/15 和歌山県南部町 二子ノ浜</li>
+			<li>#193 1998/09/15 和歌山県南部町 二子ノ浜</li>
+			<li>#194 1998/09/20 和歌山県南部町 二子ノ浜</li>
+			<li>#195 1998/09/20 和歌山県南部町 Wアーチ</li>
+			<li>#196 1998/11/14 和歌山県南部町 二子ノ浜</li>
+			<li>#197 1998/11/14 和歌山県南部町 プラム</li>
+			<li>#198 1998/11/14 和歌山県南部町 Wアーチ</li>
+			<li>#199 1998/11/14 和歌山県南部町 二子ノ浜</li>
+			<li>#200 1998/11/15 和歌山県南部町 ミサチジマ</li>
+			<li>#201 1998/11/15 和歌山県南部町 メズ</li>
+			<li>#202 1998/12/12 和歌山県南部町 二子ノ浜</li>
+			<li>#203 1998/12/12 和歌山県南部町 二子ノ浜</li>
+			<li>#204 1998/12/13 和歌山県南部町 チューリップ</li>
+			<li>#205 1998/12/13 和歌山県南部町 Wアーチ</li>
 			</ul>
 		</dd>
 		<dt>1999</dt>
+		<dd>
+			<ul>
+			<li>#206 1999/03/21 和歌山県串本町 住崎</li>
+			<li>#207 1999/03/21 和歌山県串本町 サンピラ</li>
+			<li>#208 1999/03/22 和歌山県串本町 赤土出し</li>
+			</ul>
+		</dd>
 		<dt>2000</dt>
+		<dd>
+			<ul>
+			<li>#209 2000/03/27 和歌山県南部町 二子ノ浜</li>
+			<li>#210 2000/03/27 和歌山県南部町 二子ノ浜</li>
+			<li>#211 2000/03/28 和歌山県南部町 二子ノ浜</li>
+			<li>#212 2000/03/28 和歌山県南部町 二子ノ浜</li>
+			<li>#213 2000/03/28 和歌山県南部町 ショウガセ</li>
+			<li>#214 2000/05/20 和歌山県南部町 双子ノ浜</li>
+			<li>#215 2000/05/20 和歌山県南部町 双子ノ浜</li>
+			<li>#216 2000/07/11 和歌山県南部町 ショウガセ</li>
+			<li>#217 2000/07/11 和歌山県南部町 Wアーチ</li>
+			<li>#218 2000/07/24 和歌山県南部町 ショウガセ</li>
+			<li>#219 2000/07/24 和歌山県南部町 Wアーチ</li>
+			<li>#220 2000/07/25 和歌山県南部町 ミサチジマ</li>
+			<li>#221 2000/07/25 和歌山県南部町 Wアーチ</li>
+			</ul>
+		</dd>
 		<dt>2001</dt>
+		<dd>No Dive</dd>
 		<dt>2002</dt>
+		<dd>
+			<ul>
+			<li>#222 2002/08/14 和歌山県串本町 グラスワールド</li>
+			<li>#223 2002/08/14 和歌山県串本町 住崎</li>
+			<li>#224 2002/08/15 和歌山県串本町 塔の沖</li>
+			<li>#225 2002/08/15 和歌山県串本町 備前</li>
+			<li>#226 2002/08/16 和歌山県串本町 備前</li>
+			</ul>
+		</dd>
 		<dt>2003</dt>
+		<dd>
+			<ul>
+			<li>#227 2003/09/06 和歌山県串本町 備前</li>
+			<li>#228 2003/09/06 和歌山県串本町 グラスワールド</li>
+			<li>#229 2003/09/07 和歌山県串本町 住崎</li>
+			<li>#230 2003/09/07 和歌山県串本町 イスズミ礁</li>
+			</ul>
+		</dd>
 		<dt>2004</dt>
+		<dd>
+			<ul>
+			<li>#231 2004/09/18 和歌山県南部町 ミサチ</li>
+			<li>#232 2004/09/18 和歌山県南部町 南部出し</li>
+			<li>#233 2004/09/19 和歌山県串本町 大島沖</li>
+			</ul>
+		</dd>
 		</dl>
 
 	</div>
