--- a/index.html
+++ b/index.html
@@ -339,26 +339,23 @@
 			<li>#206 1999/03/21 和歌山県串本町 住崎</li>
 			<li>#207 1999/03/21 和歌山県串本町 サンピラ</li>
 			<li>#208 1999/03/22 和歌山県串本町 赤土出し</li>
+			<li>#209 2000/03/27 和歌山県南部町 二子ノ浜</li>
+			<li>#210 1999/03/27 和歌山県南部町 二子ノ浜</li>
+			<li>#211 1999/03/28 和歌山県南部町 二子ノ浜</li>
+			<li>#212 1999/03/28 和歌山県南部町 二子ノ浜</li>
+			<li>#213 1999/03/28 和歌山県南部町 ショウガセ</li>
+			<li>#214 1999/05/20 和歌山県南部町 双子ノ浜</li>
+			<li>#215 1999/05/20 和歌山県南部町 双子ノ浜</li>
+			<li>#216 1999/07/11 和歌山県南部町 ショウガセ</li>
+			<li>#217 1999/07/11 和歌山県南部町 Wアーチ</li>
+			<li>#218 1999/07/24 和歌山県南部町 ショウガセ</li>
+			<li>#219 1999/07/24 和歌山県南部町 Wアーチ</li>
+			<li>#220 1999/07/25 和歌山県南部町 ミサチジマ</li>
+			<li>#221 1999/07/25 和歌山県南部町 Wアーチ</li>
 			</ul>
 		</dd>
 		<dt>2000</dt>
-		<dd>
-			<ul>
-			<li>#209 2000/03/27 和歌山県南部町 二子ノ浜</li>
-			<li>#210 2000/03/27 和歌山県南部町 二子ノ浜</li>
-			<li>#211 2000/03/28 和歌山県南部町 二子ノ浜</li>
-			<li>#212 2000/03/28 和歌山県南部町 二子ノ浜</li>
-			<li>#213 2000/03/28 和歌山県南部町 ショウガセ</li>
-			<li>#214 2000/05/20 和歌山県南部町 双子ノ浜</li>
-			<li>#215 2000/05/20 和歌山県南部町 双子ノ浜</li>
-			<li>#216 2000/07/11 和歌山県南部町 ショウガセ</li>
-			<li>#217 2000/07/11 和歌山県南部町 Wアーチ</li>
-			<li>#218 2000/07/24 和歌山県南部町 ショウガセ</li>
-			<li>#219 2000/07/24 和歌山県南部町 Wアーチ</li>
-			<li>#220 2000/07/25 和歌山県南部町 ミサチジマ</li>
-			<li>#221 2000/07/25 和歌山県南部町 Wアーチ</li>
-			</ul>
-		</dd>
+		<dd>No Dive</dd>
 		<dt>2001</dt>
 		<dd>No Dive</dd>
 		<dt>2002</dt>
