1999/03/21 (Sun)和歌山県串本町 住崎

--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
 		<dt>1999</dt>
 		<dd>
 			<ul>
-			<li>#206 1999/03/21 和歌山県串本町 住崎</li>
+			<li><a href="1999/1999032101.html">#206 1999/03/21 和歌山県串本町 住崎</a></li>
 			<li>#207 1999/03/21 和歌山県串本町 サンピラ</li>
 			<li>#208 1999/03/22 和歌山県串本町 赤土出し</li>
 			<li>#209 2000/03/27 和歌山県南部町 二子ノ浜</li>
