No.: 161 1998/06/28 (Sun) 和歌山県南部町 W アーチ

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
 			<li>#158 1998/06/27 和歌山県南部町 二子ノ浜</li>
 			<li>#159 1998/06/27 和歌山県南部町 二子ノ浜</li>
 			<li>#160 1998/06/28 和歌山県南部町 ショウガセ</li>
-			<li>#161 1998/06/28 和歌山県南部町 Wアーチ</li>
+			<li><a href="1998/1998062802.html">#161 1998/06/28 和歌山県南部町 Wアーチ</a></li>
 			<li>#162 1998/06/28 和歌山県南部町 二子ノ浜</li>
 			<li>#163 1998/07/11 和歌山県南部町 二子ノ浜</li>
 			<li>#164 1998/07/11 和歌山県南部町 二子ノ浜</li>
