1990/03/21 (Wed) Dive No: 32 和歌山県白浜町 円月島

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 		<dt>1990</dt>
 		<dd>
 			<ul>
-			<li>#32 1990/03/21 和歌山県白浜町 円月島</li>
+			<li><a href="1990/1990032101.html">#32 1990/03/21 和歌山県白浜町 円月島</a></li>
 			<li>#33 1990/09/09 福島県越前町 玄達瀬</li>
 			<li>#34 1990/09/09 福島県越前町 玄達瀬</li>
 			<li>#35 1990/09/27 和歌山県白浜町 中島赤ブイ</li>
