--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="format-detection" content="telephone=no">
 	<link rel="canonical" href="https://mitsugu.github.io/divinglogbook/">
-	<meta name="title" content="miyamafukashi's Diving Logbook">
+	<meta name="title" content="O's Diving Logbook">
 	<meta name="description" content="mitsugu oyama (a.k.a. OrzBruford or miyamafukashi) のダイビングログの防備録です。">
 	<meta name="keywords" content="日記, blog">
 	<meta property="og:type" content="website">
-	<meta property="og:title" content="miyamafukashi's Diving Logbook">
+	<meta property="og:title" content="O's Diving Logbook">
 	<meta property="og:description" content="mitsugu oyama (a.k.a. OrzBruford or miyamafukashi) のダイビングログの防備録です。">
 	<meta property="og:url" content="https://mitsugu.github.io/divinglogbook/">
 	<meta property="og:site_name" content="miyamafukashi's Diving Logbook">
@@ -43,7 +43,7 @@
 </head>
 
 <body>
-	<h1>miyamafukashi's Diving Logbook</h1>
+	<h1>O's Diving Logbook</h1>
 	<div id="contents">
 		<h2>テンプレートを使用する場合</h2>
 		<ul>
@@ -55,7 +55,7 @@
 			<figure class="left">
 				<img class="icon" src="20250618135735108.png" width="128">
 			</figure>
-			<h2>miyamafukashi について</h2>
+			<h2>O について</h2>
 			<p><a href="https://orzbruford.github.io/orzbruford/" target="_blank">プロフィールページ</a>があるのでご参照ください。</p>
 		</div>
 		<div class="clear"></div>
