1987/08/13 (Thu) No: 7 和歌山県海南市 東亜燃料西

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 			<li>#5 1987/07/25 和歌山県白浜町 円月島 NAUI OPENWATER 1 講習 (5)</li>
 			<li><a href="1987/1987072601.html">#6 1987/07/26 和歌山県白浜町 円月島 NAUI OPENWATER 1 講習 (6) チェックダイブ</a></li>
 
-			<li>#7 1987/08/13 和歌山県和歌山市 東亜燃料西</li>
+			<li><a href="1987/1987081301.html">#7 1987/08/13 和歌山県和歌山市 東亜燃料西</a></li>
 			<li>#8 1987/08/14 和歌山県串本町 田子の浦</li>
 			<li>#9 1987/08/14 和歌山県串本町 田子の浦</li>
 			<li>#10 1987/08/14 和歌山県串本町 住崎</li>
