潜水プロフィールのダイブテーブルの周辺の修正。
CSS ではずれるので、JavaScript で svg 要素を挿入して
座標を計算して矢印を描くように変更した。

--- a/index.html
+++ b/index.html
@@ -70,17 +70,17 @@
 		<dt>1987</dt>
 		<dd>
 			<ul>
-			<li>#1 1987/07/11 和歌山県白浜町 円月島 NAUI OPENWATER 1 講習 (1)</li>
-			<li>#2 1987/07/11 和歌山県白浜町 円月島 NAUI OPENWATER 1 講習 (2)</li>
-			<li>#3 1987/07/12 和歌山県白浜町 円月島 NAUI OPENWATER 1 講習 (3)</li>
-			<li>#4 1987/07/25 和歌山県白浜町 円月島 NAUI OPENWATER 1 講習 (4)</li>
-			<li>#5 1987/07/25 和歌山県白浜町 円月島 NAUI OPENWATER 1 講習 (5)</li>
+			<li>#01 1987/07/11 和歌山県白浜町 円月島 NAUI OPENWATER 1 講習 (1)</li>
+			<li>#02 1987/07/11 和歌山県白浜町 円月島 NAUI OPENWATER 1 講習 (2)</li>
+			<li>#03 1987/07/12 和歌山県白浜町 円月島 NAUI OPENWATER 1 講習 (3)</li>
+			<li>#04 1987/07/25 和歌山県白浜町 円月島 NAUI OPENWATER 1 講習 (4)</li>
+			<li>#05 1987/07/25 和歌山県白浜町 円月島 NAUI OPENWATER 1 講習 (5)</li>
 			<li><a href="1987/1987072601.html">#6 1987/07/26 和歌山県白浜町 円月島 NAUI OPENWATER 1 講習 (6) チェックダイブ</a></li>
 
 			<li><a href="1987/1987081301.html">#7 1987/08/13 和歌山県和歌山市 東亜燃料西</a></li>
-			<li>#8 1987/08/14 和歌山県串本町 田子の浦</li>
-			<li>#9 1987/08/14 和歌山県串本町 田子の浦</li>
-			<li>#10 1987/08/14 和歌山県串本町 住崎</li>
+			<li><a href="1987/1987081401.html">#08 1987/08/14 和歌山県串本町 田子の浦</a></li>
+			<li>#09 1987/08/14 和歌山県串本町 田子の浦</li>
+			<li>#10 1987/08/15 和歌山県串本町 住崎</li>
 
 			<li>#11 1987/09/26 和歌山県白浜町 円月島</li>
 			<li>#12 1987/09/27 和歌山県白浜町 梶原島</li>
