--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	<div id="contents">
 		<h2>テンプレートを使用する場合</h2>
 		<ul>
-		<li><a href="https://github.com/mitsugu/divinglogbook" target="_blank">ソースリポジトリ</a>から template.html と index.css をダウンロードしてください。</li>
+		<li><a href="https://github.com/mitsugu/divinglogbook" target="_blank">ソースリポジトリ</a>から template.html と index.css、index.js、profile.js をダウンロードしてご利用ください。</li>
 		<li><a href="https://mitsugu.github.io/divinglogbook/template.html" target="_blank">テンプレート</a>の表示</li>
 		</ul>
 
