--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 			<li><a href="1987/1987081301.html">#07 1987/08/13 和歌山県和歌山市 東亜燃料西</a></li>
 			<li><a href="1987/1987081401.html">#08 1987/08/14 和歌山県串本町 田子の浦</a></li>
 			<li><a href="1987/1987081402.html">#09 1987/08/14 和歌山県串本町 田子の浦</a></li>
-			<li>#10 1987/08/15 和歌山県串本町 住崎</li>
+			<li><a href="1987/1987081501.html">#10 1987/08/15 和歌山県串本町 住崎</a></li>
 
 			<li>#11 1987/09/26 和歌山県白浜町 円月島</li>
 			<li>#12 1987/09/27 和歌山県白浜町 梶原島</li>
