12-13 1987/09/27 (Sun) 和歌山県白浜町 梶原島

--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
 			<li><a href="1987/1987081501.html">#10 1987/08/15 和歌山県串本町 住崎</a></li>
 
 			<li><a href="1987/1987092601.html">#11 1987/09/26 和歌山県白浜町 円月島</a></li>
-			<li>#12 1987/09/27 和歌山県白浜町 梶原島</li>
-			<li>#13 1987/09/27 和歌山県白浜町 梶原島</li>
+			<li><a href="1987/1987092701.html">#12 1987/09/27 和歌山県白浜町 梶原島</a></li>
+			<li><a href="1987/1987092702.html">#13 1987/09/27 和歌山県白浜町 梶原島</a></li>
 
 			<li><a href="1987/1987101001.html">#14 1987/10/10 和歌山県串本町 東目</a></li>
 			<li><a href="1987/1987101101.html">#15 1987/10/11 和歌山県串本町 住崎</a></li>
