No: 22 1988/06/26 (Sun) 京都府久美浜町 トウグリ

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 			<li><a href="1988/1988050401.html">#20 1988/05/04 福井県敦賀半島 手の浦</a></li>
 
 			<li><a href="1988/1988062601.html">#21 1988/06/26 京都府久美浜町 トウグリ</a></li>
-			<li>#22 1988/06/26 京都府久美浜町 トウグリ</li>
+			<li><a href="1988/1988062602.html">#22 1988/06/26 京都府久美浜町 トウグリ</a></li>
 			<li>#23 1988/07/09 和歌山県串本町 田子の浦</li>
 			<ul>
 		</dd>
