--- a/index.html
+++ b/index.html
@@ -386,6 +386,14 @@
 			<li>#233 2004/09/19 和歌山県串本町 大島沖</li>
 			</ul>
 		</dd>
+		<dt>2025</dt>
+		<dd>
+			<ul>
+			<li><a href="2025/2025091001.html">#232 2025/09/10 和歌山県串本町 備前</a></li>
+			<li><a href="2025/2025091002.html">#233 2025/09/10 和歌山県串本町 備前</a></li>
+			<li><a href="2025/2025091003.html">#234 2025/09/10 和歌山県串本町 住崎</a></li>
+			</ul>
+		</dd>
 		</dl>
 
 	</div>
