add some year's

--- a/index.html
+++ b/index.html
@@ -386,6 +386,8 @@
 			<li>#233 2004/09/19 和歌山県串本町 大島沖</li>
 			</ul>
 		</dd>
+		<dt>2005 〜 2024</dt>
+		<dd>No Dive</dd>
 		<dt>2025</dt>
 		<dd>
 			<ul>
