--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 			<figure class="left">
 				<img class="icon" src="20250618135735108.png" width="128">
 			</figure>
-			<h2>O について</h2>
+			<h2>ぼくについて</h2>
 			<p><a href="https://orzbruford.github.io/orzbruford/" target="_blank">プロフィールページ</a>があるのでご参照ください。</p>
 		</div>
 		<div class="clear"></div>
