--- a/index.html
+++ b/index.html
@@ -394,6 +394,7 @@
 			<li><a href="2025/2025091001.html">#232 2025/09/10 和歌山県串本町 備前</a></li>
 			<li><a href="2025/2025091002.html">#233 2025/09/10 和歌山県串本町 備前</a></li>
 			<li><a href="2025/2025091003.html">#234 2025/09/10 和歌山県串本町 住崎</a></li>
+			<li><a href="2025/2025091301.html">#235 2025/09/13 和歌山県串本町 住崎</a></li>
 			</ul>
 		</dd>
 		</dl>
