--- a/index.html
+++ b/index.html
@@ -397,6 +397,9 @@
 			<li><a href="2025/2025091301.html">#235 2025/09/13 和歌山県串本町 住崎</a></li>
 			<li><a href="2025/2025091601.html">#236 2025/09/16 和歌山県串本町 グラスワールド ウミガメポイント</a></li>
 			<li><a href="2025/2025091602.html">#237 2025/09/16 和歌山県串本町 グラスワールド アオリイカ産卵床</a></li>
+			<li><a href="2025/2025092001.html">#238 2025/09/20 和歌山県串本町 住崎</a></li>
+			<li><a href="2025/2025092002.html">#239 2025/09/20 和歌山県串本町 アンドの鼻</a></li>
+			<li><a href="2025/2025092003.html">#240 2025/09/20 和歌山県串本町 中黒礁</a></li>
 			</ul>
 		</dd>
 		</dl>
