--- a/index.html
+++ b/index.html
@@ -400,6 +400,8 @@
 			<li><a href="2025/2025092001.html">#238 2025/09/20 和歌山県串本町 住崎</a></li>
 			<li><a href="2025/2025092002.html">#239 2025/09/20 和歌山県串本町 アンドの鼻</a></li>
 			<li><a href="2025/2025092003.html">#240 2025/09/20 和歌山県串本町 中黒礁</a></li>
+			<li><a href="2025/2025092101.html">#241 2025/09/21 和歌山県串本町 備前</a></li>
+			<li><a href="2025/2025092102.html">#242 2025/09/21 和歌山県串本町 グラスワールド</a></li>
 			</ul>
 		</dd>
 		</dl>
