write 1988/07/09's log and more

--- a/index.html
+++ b/index.html
@@ -101,14 +101,14 @@
 
 			<li><a href="1988/1988062601.html">#21 1988/06/26 京都府久美浜町 トウグリ</a></li>
 			<li><a href="1988/1988062602.html">#22 1988/06/26 京都府久美浜町 トウグリ</a></li>
-			<li>#23 1988/07/09 和歌山県串本町 田子の浦</li>
+			<li><a href="1988/1988070901.html">#23 1988/07/09 和歌山県串本町 田子の浦</a></li>
 			<ul>
 		</dd>
 		<dt>1989</dt>
 		<dd>
 			<ul>
-			<li>#24 1989/04/22 和歌山県串本町 田子の浦</li>
-			<li>#25 1989/04/22 和歌山県串本町 田子の浦</li>
+			<li><a href="1989/1989042201.html">#24 1989/04/22 和歌山県串本町 田子の浦</a></li>
+			<li><a href="1989/1989042202.html">#25 1989/04/22 和歌山県串本町 田子の浦</a></li>
 			<li>#26 1989/05/03 和歌山県串本町 田子の浦</li>
 			<li>#27 1989/05/03 和歌山県串本町 田子の浦</li>
 			<li>#28 1989/06/04 和歌山県由良町 白崎立厳</li>
