--- a/index.html
+++ b/index.html
@@ -112,10 +112,10 @@
 			<ul>
 			<li><a href="1989/1989042201.html">#24 1989/04/22 和歌山県串本町 田子の浦</a></li>
 			<li><a href="1989/1989042202.html">#25 1989/04/22 和歌山県串本町 田子の浦</a></li>
-			<li>#26 1989/05/03 和歌山県串本町 田子の浦</li>
-			<li>#27 1989/05/03 和歌山県串本町 田子の浦</li>
-			<li>#28 1989/06/04 和歌山県由良町 白崎立厳</li>
-			<li>#29 1989/08/06 福井県越前町 軍艦島</li>
+			<li><a href="1989/1989050301.html">#26 1989/05/03 和歌山県串本町 田子の浦</a></li>
+			<li><a href="1989/1989050302.html">#27 1989/05/03 和歌山県串本町 田子の浦</a></li>
+			<li><a href="1989/1989060401.html">#28 1989/06/04 和歌山県由良町 白崎立厳</a></li>
+			<li><a href="1989/1989080601.html">#29 1989/08/06 福井県越前町 軍艦島</a></li>
 			<li>#30 1989/08/27 福井県敦賀半島 立石</li>
 			<li>#31 1989/08/28 福井県敦賀半島 水島レック</li>
 			</ul>
