I finished writing my 1989 diving log.

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 			<li>#17 1988/05/02 和歌山県白浜町 梶原島 (データ残存せず)</li>
 			<li>#18 1988/05/03 和歌山県白浜町 円月島 (データ残存せず)</li>
 			<li>#19 1988/05/03 和歌山県白浜町 円月島 (データ残存せず)</li>
-			<li><a href="1988/1988050401.html">#20 1988/05/04 福井県敦賀半島 手の浦</a></li>
+			<li><a href="1988/1988050401.html">#20 1988/05/04 福井県敦賀市 手の浦</a></li>
 
 			<li><a href="1988/1988062601.html">#21 1988/06/26 京都府久美浜町 トウグリ</a></li>
 			<li><a href="1988/1988062602.html">#22 1988/06/26 京都府久美浜町 トウグリ</a></li>
@@ -116,8 +116,8 @@
 			<li><a href="1989/1989050302.html">#27 1989/05/03 和歌山県串本町 田子の浦</a></li>
 			<li><a href="1989/1989060401.html">#28 1989/06/04 和歌山県由良町 白崎立厳</a></li>
 			<li><a href="1989/1989080601.html">#29 1989/08/06 福井県越前町 軍艦島</a></li>
-			<li>#30 1989/08/27 福井県敦賀半島 立石</li>
-			<li>#31 1989/08/28 福井県敦賀半島 水島レック</li>
+			<li><a href="1989/1989082701.html">#30 1989/08/27 福井県敦賀市 立石</a></li>
+			<li><a href="1989/1989082702.html">#31 1989/08/27 福井県敦賀市 水島レック</a></li>
 			</ul>
 		</dd>
 		<dt>1990</dt>
