--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
 			<li><a href="1990/1990032101.html">#32 1990/03/21 和歌山県白浜町 円月島</a></li>
 			<li><a href="1990/1990090901.html">#33 1990/09/09 福島県越前町 玄達瀬</a></li>
 			<li><a href="1990/1990090902.html">#34 1990/09/09 福島県越前町 玄達瀬</a></li>
-			<li>#35 1990/09/27 和歌山県白浜町 中島赤ブイ</li>
-			<li>#36 1990/09/28 和歌山県白浜町 塔島</li>
+			<li><a href="1990/1990092701.html">#35 1990/09/27 和歌山県白浜町 中島赤ブイ</a></li>
+			<li><a href="1990/1990092702.html">#36 1990/09/28 和歌山県白浜町 塔島</a></li>
 			<li>#37 1990/10/04 和歌山県白浜町 円月島 Rescue Techniques 講習</li>
 			<li>#38 1990/10/04 和歌山県白浜町 円月島 Rescue Techniques 講習</li>
 			<li>#39 1990/10/04 和歌山県白浜町 円月島 Rescue Techniques 講習</li>
