--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
 		<dt>1991</dt>
 		<dd>
 			<ul>
-			<li>#40 1991/01/05 和歌山県白浜町 臨海</li>
-			<li>#41 1991/01/05 和歌山県白浜町 沖ノ島</li>
+			<li><a href="1991/1991010501.html">#40 1991/01/05 和歌山県白浜町 臨海</a></li>
+			<li><a href="1991/1991010502.html">#41 1991/01/05 和歌山県白浜町 沖ノ島</a></li>
 			</ul>
 		</dd>
 		<dt>1992</dt>
