--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 		<div class="clear"></div>
 
 		<h2>ぼくのダイビングログ</h2>
-		<p>ぼくがダイビングを始めてからのログブックを公開しています。</p>
+		<p>ぼくがダイビングを始めてからのログブックを公開しています。テンプレートの使い方の参考にしてください。</p>
 		<p>1995 年の阪神・淡路大震災でログの大半を失いました。データのみスプレッドシートに打ち込んでプリントしたものが幸い残っていたので、データだけ入力しているログが多くを占めます。その点ご了承ください。</p>
 		<p>また一部のダイビングはデータすら残っていませんので、それらのログの記載はありません。また全てのダイビングのログを公開しているわけではないことも明記しておきます。</p>
 		<p>ITC に向けた水泳や、ベイルアウト、スキン脱着、スキンダイビング等のトレーニングのための海行きなどは、ダイビングとしてカウントしていません。</p>
@@ -143,12 +143,12 @@
 		<dt>1992</dt>
 		<dd>
 			<ul>
-			<li>#42 1992/05/09 静岡県沼津市 大瀬崎先端</li>
-			<li>#43 1992/05/09 静岡県沼津市 湾内</li>
-			<li>#44 1992/05/10 静岡県沼津市 柵下 天狗の棚</li>
-			<li>#45 1992/05/10 静岡県沼津市 一本松</li>
-			<li><a href="1992/1992060701.html">#46 1992/06/07 静岡県沼津市 大瀬崎 一本松</a></li>
-			<li><a href="1992/1992060702.html">#47 1992/06/07 静岡県沼津市 大瀬崎 先端</a></li>
+			<li><a href="1992/1992050901.html">#42 1992/05/09 静岡県沼津市 大瀬崎先端</a></li>
+			<li><a href="1992/1992050902.html">#43 1992/05/09 静岡県沼津市 大瀬崎湾内</a></li>
+			<li><a href="1992/1992051001.html">#44 1992/05/10 静岡県沼津市 大瀬崎柵下 天狗の棚</a></li>
+			<li><a href="1992/1992051002.html">#45 1992/05/10 静岡県沼津市 大瀬崎一本松</a></li>
+			<li><a href="1992/1992060701.html">#46 1992/06/07 静岡県沼津市 大瀬崎一本松</a></li>
+			<li><a href="1992/1992060702.html">#47 1992/06/07 静岡県沼津市 大瀬崎先端</a></li>
 			<li><a href="1992/1992071201.html">#48 1992/07/12 静岡県松崎町 雲見 赤井浜</a></li>
 			<li><a href="1992/1992071202.html">#49 1992/07/12 静岡県松崎町 雲見 赤井浜</a></li>
 			<li>#50 1992/08/08 福井県越前町 軍艦岩
