write 1992's wakayama's log

--- a/index.html
+++ b/index.html
@@ -151,10 +151,10 @@
 			<li><a href="1992/1992060702.html">#47 1992/06/07 静岡県沼津市 大瀬崎先端</a></li>
 			<li><a href="1992/1992071201.html">#48 1992/07/12 静岡県松崎町 雲見 赤井浜</a></li>
 			<li><a href="1992/1992071202.html">#49 1992/07/12 静岡県松崎町 雲見 赤井浜</a></li>
-			<li>#50 1992/08/08 福井県越前町 軍艦岩
-			<li>#51 1992/08/08 福井県越前町 玉川観音前
-			<li>#52 1992/12/05 和歌山県白浜町 梶原島
-			<li>#53 1992/12/05 和歌山県白浜町 円月島
+			<li><a href="1992/1992080801.html">#50 1992/08/08 福井県越前町 軍艦岩</a></li>
+			<li><a href="1992/1992080802.html">#51 1992/08/08 福井県越前町 玉川観音前</a></li>
+			<li><a href="1992/1992120501.html">#52 1992/12/05 和歌山県白浜町 梶原島</a></li>
+			<li><a href="1992/1992120502.html">#53 1992/12/05 和歌山県白浜町 円月島</a></li>
 			</ul>
 		</dd>
 		<dt>1993</dt>
