1993 年のログを 2 件追加

--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
 		<dt>1993</dt>
 		<dd>
 			<ul>
-			<li>#54 1993/07/19 福井県越前町 軍艦岩</li>
-			<li>#55 1993/07/19 福井県越前町 カレイ崎荘前</li>
+			<li><a href="1993/1993071901.html">#54 1993/07/19 福井県越前町 軍艦岩</a></li>
+			<li><a href="1993/1993071902.html">#55 1993/07/19 福井県越前町 カレイ崎荘前</a></li>
 			<li>#56 1993/08/26 和歌山県串本町 オレンジハウス前 Advanced 講習</a></li>
 			<li>#57 1993/08/26 和歌山県串本町 オレンジハウス前 Advanced 講習</a></li>
 			<li>#58 1993/08/27 和歌山県串本町 オレンジハウス前 Advanced 講習</a></li>
