自画像変更

--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
 	<div id="contents">
 		<h2>テンプレートを使用する場合</h2>
 		<ul>
-		<li><a href="https://github.com/mitsugu/divinglogbook" target="_blank">ソースリポジトリ</a>から template.html と index.css、index.js、profile.js をダウンロードしてご利用ください。</li>
+		<li><a href="https://github.com/mitsugu/divinglogbook" target="_blank">ソースリポジトリ</a>から template.html と index.css、index.js、profile.js、tippy.css、tippy.js をダウンロードしてご利用ください。</li>
 		<li><a href="https://mitsugu.github.io/divinglogbook/template.html" target="_blank">テンプレート</a>の表示</li>
 		</ul>
 
 		<div>
 			<figure class="left">
-				<img class="icon" src="20250618135735108.png" width="128">
+				<img class="icon" src="20260112162001056.png" width="128">
 			</figure>
 			<h2>ぼくについて</h2>
 			<p><a href="https://orzbruford.github.io/orzbruford/" target="_blank">プロフィールページ</a>があるのでご参照ください。</p>
