--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="format-detection" content="telephone=no">
 	<link rel="canonical" href="https://mitsugu.github.io/divinglogbook/">
-	<meta name="title" content="O's Diving Logbook">
+	<meta name="title" content="Orz's Diving Logbook">
 	<meta name="description" content="mitsugu oyama (a.k.a. OrzBruford or miyamafukashi) のダイビングログの防備録です。">
 	<meta name="keywords" content="日記, blog">
 	<meta property="og:type" content="website">
-	<meta property="og:title" content="O's Diving Logbook">
+	<meta property="og:title" content="Orz's Diving Logbook">
 	<meta property="og:description" content="mitsugu oyama (a.k.a. OrzBruford or miyamafukashi) のダイビングログの防備録です。">
 	<meta property="og:url" content="https://mitsugu.github.io/divinglogbook/">
-	<meta property="og:site_name" content="miyamafukashi's Diving Logbook">
+	<meta property="og:site_name" content="Orz's Diving Logbook">
 	<meta property="og:html" content="mitsugu oyama (a.k.a. OrzBruford or miyamafukashi) のダイビングログの防備録です。">
 
 	<!--
@@ -43,8 +43,12 @@
 </head>
 
 <body>
-	<h1>O's Diving Logbook</h1>
+	<h1>Orz's Diving Logbook</h1>
 	<div id="contents">
+		<h2>このサイトについて</h2>
+		<p>このサイトはぼくが html でつくったダイビングのログブックのテンプレートを配布するためのサイトです。</p>
+		<p>テンプレート自体は github.com で公開しており、その使用サンプルとしてぼく自身のログブックをこのサイトで公開しています。html なのでご自身の Web サイトに組み込んだり、単にログブックの電子化に利用することなどができます。</p>
+
 		<h2>テンプレートを使用する場合</h2>
 		<ul>
 		<li><a href="https://github.com/mitsugu/divinglogbook" target="_blank">ソースリポジトリ</a>から template.html と index.css、index.js、profile.js、tippy.css、tippy.js をダウンロードしてご利用ください。</li>
